# latin-macronizer

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Makefile  README.md  compose.yml  extractlexicon.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-and-push.yml
macronizer/: app.py  cgi.py  cli.py  lib.py  postags.py  wsgi.py
