[project]
name = "latin-macronizer"
dependencies = ["falcon", "gunicorn"]
version = "0.1.0"

[project.optional-dependencies]
development = ["pyright", "ruff"]

[project.scripts]
macronize = "macronizer.cli:parser"

[tool.setuptools.packages.find]
include = ["macronizer"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
exclude = """
(
  ^/macronizer/data/lemmas\\.py
  | ^/macronizer/data/macronized_endings\\.py
)
"""
